this is the culprit behind the firefox display issues

--- a/www/templates/default/default_template.css
+++ b/www/templates/default/default_template.css
@@ -922,7 +922,6 @@ td.gridbox_br {
   padding-left: 10px;
   margin: 5px;
   color: #000000;
-  float: left;
   width:97.5%;
 }
 
